--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,7 +1,7 @@
-{% extends 'base.html'%}
+<!-- {% extends 'base.html'%}
 
 {% block content %}
-<div class="container">
+<!-- <div class="container"> -->
     <div class="row">
         <!-- displaying username -->
         <div class="col-md-4">
@@ -32,4 +32,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %} -->
